k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sportkits
  labels:
    name: sportkits
    environment: production
    app.kubernetes.io/name: sportkits
    app.kubernetes.io/component: namespace
